wordpress/k8s-config/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:4.8-apache
          ports:
            - containerPort: 80
              name: wordpress
          requests:
            cpu: "128m"
            memory: "256Mi"
          limits:
            cpu: "256m"
            memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /wp-admin/install.php
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
